# ThermoBench-Consist

./: .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  RELEASE_CHECKLIST.md  paper.bib  paper.md  pyproject.toml
.github/workflows/: ci.yml
notebooks/: ThermoBench_Quickstart.ipynb  ThermoBench_Quickstart.nbconvert.ipynb
templates/: report.html.j2  report.md.j2
tests/: test_adapters.py  test_clapeyron.py  test_compressibility.py  test_convergence.py  test_monotonic.py  test_report_json.py
thermobench/: __init__.py  api.py  checks.py  grid.py  report.py  score.py
thermobench/adapters/: __init__.py  adapter_coolprop.py  adapter_toy_inconsistent.py
thermobench/datasets/: CO2_grid.csv  N2_grid.csv
