[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "thermobench-consist"
version = "0.1.0"
description = "Diagnostics/benchmark suite for thermodynamic consistency of ML EOS/VLE surrogates"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "ThermoBench Team", email = "maintainers@thermobench.org" }
]
keywords = ["thermodynamics", "EOS", "CoolProp", "benchmark", "consistency", "VLE"]
dependencies = [
  "numpy>=1.26,<2.1",
  "scipy>=1.11,<1.14",
  "pandas>=2.0,<2.3",
  "matplotlib>=3.7,<3.10",
  "CoolProp==6.6.0",
  "pint>=0.22,<0.25",
  "jinja2>=3.1,<3.2",
  "pydantic>=2.0,<3.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0,<9.0",
  "black>=24.0,<25.0",
  "ruff>=0.5.0,<0.7.0",
]

[project.scripts]
thermobench = "thermobench:cli_main"

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]  # black handles line length
target-version = "py310"

[tool.pytest.ini_options]
addopts = "-q"
filterwarnings = [
  "ignore:.*distutils.*:DeprecationWarning",
  "ignore:.*np.bool8.*:DeprecationWarning",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["thermobench*"]
exclude = ["tests*", "templates*", "notebooks*"]

[tool.setuptools.package-data]
thermobench = ["datasets/*.csv"]
